--- a/index.html
+++ b/index.html
@@ -13,15 +13,19 @@
         <img src="https://picsum.photos/200/200" alt="" class="profile">
 
         <h3 class="centro">
-            Olá eu sou
+            Olá eu o sou
         </h3>
 
         <h1 class="centro">
             Casimiro
         </h1>
-
+ 
+        <a href="sobre.html"> 
         <input type="button" value="Quem sou eu">
+        </a> 
+        <a href="coisas.html"> 
         <input type="button" value="Coisas que eu gosto">
+      </a>
     </div>
    
     
