--- a/sobre.html
+++ b/sobre.html
@@ -17,7 +17,8 @@
 
       <img src="https://picsum.photos/200/200" alt="imagem Casimiro_Miguel">
  
-
+      <a href="index.html"> 
       <input type="button" value="Voltar">
+    </a>
 </body>
 </html>
