--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <img src="https://picsum.photos/200/200" alt="" class="profile">
 
         <h3 class="centro">
-            Olá eu o sou
+            Olá eu  sou o
         </h3>
 
         <h1 class="centro">
